[workspace]
members = ["derive"]

[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
futures = "0.3.19"
tokio-postgres = "0.7.5"
tokio = { version = "1.15.0", features = ["full"] }
derive = { path = "./derive" }
async-trait = "0.1.52"
deadpool = "0.9.2"
deadpool-sqlite = "0.3.1"
rusqlite = "0.25.4"
deadpool-postgres = "0.10.1"
paste = "1.0.6"

[features]
bundled = ["rusqlite/bundled"]
default = ["bundled"]
